# zephyr

drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.mspm0  dma_mspm0.c
drivers/flash/: Kconfig.stm32
drivers/mspi/: CMakeLists.txt  Kconfig  Kconfig.stm32_ospi  mspi_stm32.c  mspi_stm32.h  ospi_stm32.c
drivers/sdhc/: CMakeLists.txt  Kconfig  Kconfig.stm32  sdhc_stm32.c
dts/arm/st/u0/: stm32u0.dtsi  stm32u073.dtsi
dts/arm/ti/mspm0g1x0x_g3x0x/: mspm0g1x0x_g3x0x.dtsi
dts/bindings/dma/: ti,mspm0-dma.yaml
dts/bindings/mmc/: st,stm32-sdhc.yaml
dts/bindings/sdhc/: st,stm32-sdhc.yaml
modules/: Kconfig.stm32
samples/drivers/sdhc/sdhc_read_write/: CMakeLists.txt  prj.conf
samples/drivers/sdhc/sdhc_read_write/src/: main.c
samples/hello_world/: prj.conf
samples/hello_world/src/: main.c
samples/kws/: CMakeLists.txt  README.md  float_model.tflite  model.cc  prj.conf
samples/kws/src/: main.cpp
samples/kws/train/: train_micro_speech_model_custom.ipynb
samples/subsys/shell/shell_module/: prj.conf
subsys/sd/: sd_ops.c
